Fixed unwanted rare behaviour where columns sometimes broke and displaced card to the wrong end of an adjacent row and pushed subsequent columns out of sync. The behaviour was prevented by wrapping each column collection in its own div and using css to specify avoid-break within it.

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,12 @@ article {
           column-gap: 20px; 
 }
 
+.column-container div.col-wrapper{
+  -webkit-column-break-inside: avoid;
+  break-inside: avoid-column;
+  margin-bottom: 1rem; 
+}
+
 .column-container article {
   -webkit-column-break-inside: avoid;
   break-inside: avoid-column;
